# holyc

./: .clang-format  .gitignore  CMakeLists.txt  README.org  TODO.org  hc.bnf  test.hc
src/: .gitignore  CMakeLists.txt  config.cpp  config.hpp  grammar.org  hclang.cpp  hclang.hpp  log.hpp  main.cpp  simul.cpp  simul.hpp  slang.cpp  slang.hpp  util.cpp  util.hpp
src/lexer/: lexer.cpp  lexer.hpp  token.cpp  token.hpp
src/parser/: ast.cpp  ast.hpp  llvm.cpp  parser.cpp  parser.hpp  semantics.cpp  symbols.cpp  symbols.hpp  tmp.cpp  type.hpp
test/: CMakeLists.txt  lexer.cpp  main.cpp
